Time: 31 ms (10.73%), Space: 44.7 MB (71.29%) - LeetHub